<resources>
    <string name="app_name">Note keeper</string>
    <string name="add_category">Add Category</string>
    <string name="edit_category">Edit Category</string>
    <string name="category">Category</string>
    <string name="categorize_to_organize">Categorize to organize</string>
    <string name="title">Title</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="thoughts">Thoughts</string>
    <string name="as_you_think_so_shall_you_become">As you think, so shall you become</string>
    <string name="text">Text</string>
    <string name="delete">Delete</string>
    <string name="favourite">Favourite</string>
    <string name="notes">Notes</string>
    <string name="note">Note</string>
    <string name="remove_account">Remove account</string>
    <string name="note_it">NOTE-IT</string>
    <string name="stay_centered">Stay centered</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="number">Number</string>
    <string name="register">Register</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="edit">Edit</string>
    <string name="edit_profile">Edit profile</string>
    <string name="select_category">Select category</string>
    <string name="account_deletion">Account Deletion !</string>
    <string name="account_deletion_msg">Are you sure you want to delete this account permanently ?</string>
    <string name="all_fields_required">All fields are required.</string>
    <string name="note_deletion">Note Deletion !</string>
    <string name="note_deletion_msg">Are you sure you want to delete this note ?</string>
    <string name="category_deletion">Category Deletion !</string>
    <string name="category_deletion_msg">Deleting category will delete all of its tasks. ?</string>


</resources>