<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/splashFragment">

    <fragment
        android:id="@+id/splashFragment"
        android:name="com.example.simplenoteapp.screens.splash.SplashFragment"
        android:label="fragment_splash"
        tools:layout="@layout/fragment_splash">
        <action
            android:id="@+id/action_splashFragment_to_registerFragment"
            app:destination="@id/registerFragment"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_splashFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/registerFragment"
        android:name="com.example.simplenoteapp.screens.register.RegisterFragment"
        android:label="fragment_register"
        tools:layout="@layout/fragment_register">
        <action
            android:id="@+id/action_registerFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/registerFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.simplenoteapp.screens.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_notesFragment"
            app:destination="@id/notesFragment">
            <argument
                android:name="categoryObj"
                app:argType="com.example.domain.entity.Category" />
        </action>
        <action
            android:id="@+id/action_homeFragment_to_addCategoryFragment"
            app:destination="@id/addCategoryFragment" />
    </fragment>
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.simplenoteapp.screens.profile_fragment.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_profileFragment_to_registerFragment"
            app:destination="@id/registerFragment"
            app:popUpTo="@id/homeFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_profileFragment_to_editProfileFragment"
            app:destination="@id/editProfileFragment">
            <argument
                android:name="categoryObj"
                app:argType="com.example.domain.entity.Category" />
        </action>
    </fragment>
    <fragment
        android:id="@+id/favouriteFragment"
        android:name="com.example.simplenoteapp.screens.favourite.FavouriteFragment"
        android:label="@string/favourite"
        tools:layout="@layout/fragment_favourite">
        <action
            android:id="@+id/action_favouriteFragment_to_noteFragment"
            app:destination="@id/noteDetailsFragment">
            <argument
                android:name="note"
                app:argType="com.example.domain.entity.Note" />
        </action>
    </fragment>
    <fragment
        android:id="@+id/editProfileFragment"
        android:name="com.example.simplenoteapp.screens.profile_edit.EditProfileFragment"
        android:label="Edit"
        tools:layout="@layout/fragment_edit_profile" />
    <fragment
        android:id="@+id/addNoteFragment"
        android:name="com.example.simplenoteapp.screens.add_note.AddNoteFragment"
        android:label="Add note"
        tools:layout="@layout/fragment_add_note">

        <argument
            android:name="categoryObj"
            app:argType="com.example.domain.entity.Category" />
    </fragment>

    <fragment
        android:id="@+id/noteDetailsFragment"
        android:name="com.example.simplenoteapp.screens.notes_details.NoteDetailsFragment"
        android:label="Note"
        tools:layout="@layout/fragment_notes_details">
        <argument
            android:name="note"
            app:argType="com.example.domain.entity.Note" />
    </fragment>
    <fragment
        android:id="@+id/notesFragment"
        android:name="com.example.simplenoteapp.screens.notes.NotesFragment"
        android:label="Notes"
        tools:layout="@layout/fragment_notes">
        <action
            android:id="@+id/action_notesFragment_to_noteDetailsFragment"
            app:destination="@id/noteDetailsFragment">
            <argument
                android:name="note"
                app:argType="com.example.domain.entity.Note" />
        </action>
        <action
            android:id="@+id/action_notesFragment_to_addNoteFragment"
            app:destination="@id/addNoteFragment" />
        <argument
            android:name="categoryObj"
            app:argType="com.example.domain.entity.Category" />
        <action
            android:id="@+id/action_notesFragment_to_categoryEditFragment"
            app:destination="@id/categoryEditFragment">
            <argument
                android:name="categoryObj"
                app:argType="com.example.domain.entity.Category" />
        </action>
    </fragment>
    <fragment
        android:id="@+id/addCategoryFragment"
        android:name="com.example.simplenoteapp.screens.add_category.AddCategoryFragment"
        android:label="@string/add_category"
        tools:layout="@layout/fragment_add_category" />
    <fragment
        android:id="@+id/categoryEditFragment"
        android:name="com.example.simplenoteapp.screens.edit_category.CategoryEditFragment"
        android:label="@string/edit_category"
        tools:layout="@layout/fragment_category_edit">
        <argument
            android:name="categoryObj"
            app:argType="com.example.domain.entity.Category" />
        <action
            android:id="@+id/action_categoryEditFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/notesFragment"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>